--- a/index.html
+++ b/index.html
@@ -35,21 +35,18 @@
     }
     .comic-panel {
       text-align: center;
-      min-height: 700px; /* Fixed size to prevent buttons from moving */
+      min-height: 400px;
       display: flex;
       justify-content: center;
       align-items: center;
       position: relative;
+      overflow: hidden;
     }
-    .comic-panel img {
+    .comic-panel img, .comic-panel iframe {
       max-width: 100%;
+      max-height: 100%;
       height: auto;
-      display: block;
-    }
-    .comic-panel iframe {
-      width: 100%;
-      height: 100%;
-      max-height: 400px;
+      width: auto;
     }
     .navigation button {
       margin: 5px;
@@ -113,8 +110,7 @@
         }
       }
     };
-
-    let selectedCollection = Object.keys(COMIC_COLLECTIONS)[0];
+  let selectedCollection = Object.keys(COMIC_COLLECTIONS)[0];
     let selectedComic = Object.keys(COMIC_COLLECTIONS[selectedCollection].comics)[0];
     let currentPanel = 1;
 
